--- a/src/styles.css
+++ b/src/styles.css
@@ -160,7 +160,7 @@ h1 {
   text-align: center;
 }
 
-@media only screen and (min-width: 800px) {
+/* @media only screen and (min-width: 800px) {
   .l_sidebar,
   .r_sidebar {
     display: flex;
@@ -172,4 +172,4 @@ h1 {
     display: flex;
     border: var(--border);
   }
-}
+} */
